margin fixes, adding label

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>I love building things. I have experience building web and native mobile applications. Currently I am working on expanding my knowledge of front end web development.</p>
 
         <div id="landing-info">
-
+          <h3 id="projects-label">PROJECTS</h3>
           <div class="landing-item" id="aarininc">
 
               <div class="landing-item-content">
