--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
         <span>
           <img src="res/me.png" />
         </span>
+        <h2>Dylan Rose</h2>
       </div>
 
       <div id="nav-rest">
 
         <div class="col">
           <h3>HOME</h3>
+          <h3>PROJECTS</h3>
           <h3>ABOUT</h3>
-          <h3>PORTFOLIO</h3>
           <h3>GET IN TOUCH</h3>
         </div>
 
@@ -55,7 +56,7 @@
         <p>I love building things. I have experience building web and native mobile applications. Currently I am working on expanding my knowledge of front end web development.</p>
 
         <div id="landing-info">
-          <h3 id="projects-label">PROJECTS</h3>
+          <h3 class="section-header">my projects</h3>
           <div class="landing-item" id="aarininc">
 
               <div class="landing-item-content">
@@ -121,55 +122,36 @@
               </div>
 
           </div>
-          <!--
-          <div class="landing-item" id="smartparts">
-            <h2>SmartParts Phone Repair.</h2>
-            <p>A beautiful single page scrolling website built specifically to meet the customers needs and send the message that they were looking for.</p>
-            <!--Title and description on the left, full image of the site on the right with text lining the left
-            <ul>
-              <li>Single Page Design</li>
-              <li>Professional styling and colors delivers confidence in the brand</li>
-              <li>Fully Editable Content</li>
-              <li>Secure contact area with dynamic capitcha</li>
-              <li>Built and delivered in 3 business days</li>
-            </ul>
-          </div>
-
-          <div class="landing-item" id="akfitness">
-            <h2>AK Fitness.</h2>
-            <p>A beautiful single page scrolling website built specifically to meet the customers needs and send the message that they were looking for.</p>
-            <!--Title and description on the left, full image of the site on the right with text lining the left
-            <ul>
-              <li>Single Page Design</li>
-              <li>Professional styling and colors delivers confidence in the brand</li>
-              <li>Fully Editable Content</li>
-              <li>Secure contact area with dynamic capitcha</li>
-              <li>Built and delivered in 3 business days</li>
-            </ul>
-          </div>
-
-          <div class="landing-item" id="allbuthome">
-            <h2>All But Home</h2>
-            <p>A beautiful single page scrolling website built specifically to meet the customers needs and send the message that they were looking for.</p>
-            <!--Title and description on the left, full image of the site on the right with text lining the left
-            <ul>
-              <li>Single Page Design</li>
-              <li>Professional styling and colors delivers confidence in the brand</li>
-              <li>Fully Editable Content</li>
-              <li>Secure contact area with dynamic capitcha</li>
-              <li>Built and delivered in 3 business days</li>
-            </ul>
-          </div>
-        -->
-
 
         </div>
 
       </div>
 
+      <div id="interests">
+        <h3 class="section-header">skills and interests</h3>
+        <p>I have been developing my passion for software development since my Junior year of high school when I took an introductory course in Web Design. It was then that I became obsessed with the infinite number of different skills that I could learn and then directly apply to whatever project I was working on at the time. To this day my main goal is to continually push myself to keep learning new things every day as I strongly feel that continual learning and growth is one of the key factors necessary to being successful in this field. Up until now I have been putting most of my focus on sharpening my Java skills and specifically applying those skills to Android app development. Having reached my goal of releasing an app to the market, I have decided to shift my area of focus a bit, towards web development. If you have any questions or comments please feel free to reach out using the form at the bottom of the page!
+        </p>
+        
+        <div id="skills-container">
+          <div class="skill">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo fermentum lorem, eget euismod elit elementum id. Fusce sed mi non lacus facilisis tincidunt.</p>
+          </div>
+          <div class="skill">
+            <h4>Mobile App Development</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo fermentum lorem, eget euismod elit elementum id. Fusce sed mi non lacus facilisis tincidunt.</p>
+          </div>
+          <div class="skill">
+            <h4>Software Development</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo fermentum lorem, eget euismod elit elementum id. Fusce sed mi non lacus facilisis tincidunt.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
 
   </section>
+
 
   <!-- next section, same margin left as other (using js). outer section is flex-grow 1 and set the inner items (like #main above) to width: 85%
 
