--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h3 class="section-header">skills and interests</h3>
         <p>I have been developing my passion for software development since my Junior year of high school when I took an introductory course in Web Design. It was then that I became obsessed with the infinite number of different skills that I could learn and then directly apply to whatever project I was working on at the time. To this day my main goal is to continually push myself to keep learning new things every day as I strongly feel that continual learning and growth is one of the key factors necessary to being successful in this field. Up until now I have been putting most of my focus on sharpening my Java skills and specifically applying those skills to Android app development. Having reached my goal of releasing an app to the market, I have decided to shift my area of focus a bit, towards web development. If you have any questions or comments please feel free to reach out using the form at the bottom of the page!
         </p>
-        
+
         <div id="skills-container">
           <div class="skill">
             <h4>Web Design</h4>
@@ -146,6 +146,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin commodo fermentum lorem, eget euismod elit elementum id. Fusce sed mi non lacus facilisis tincidunt.</p>
           </div>
         </div>
+      </div>
+
+      <div id="contact">
+        
       </div>
 
     </div>
