adjusted centering of entire conainer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
 
           </div>
 
+          <!-- ADD ITEM FOR ALL BUT HOME APP, PUT PORTRAIT SCREENSHOTS ON THE RIGHT OF INFO, CONTAINER IS ROW INSTEAD OF COL -->
+
         </div>
 
       </div>
