--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <ul>
                   <li>Single Page Design</li>
                   <li>Professional styling and colors delivers confidence in the brand</li>
+                  <li>Mobile friendly design</li>
                   <li>Fully Editable Content</li>
                   <li>Secure contact area with dynamic capitcha</li>
                   <li>Built and delivered in 3 business days</li>
@@ -87,10 +88,8 @@
                 <!--Title and description on the left, full image of the site on the right with text lining the left -->
                 <ul>
                   <li>Multi Page Design</li>
-                  <li>Professional styling and colors delivers confidence in the brand</li>
-                  <li>Fully Editable Content</li>
-                  <li>Secure contact area with dynamic capitcha</li>
-                  <li>Built and delivered in 3 business days</li>
+                  <li>Payment options built in</li>
+                  <li>Mobile friendly design</li>
                 </ul>
               </div>
 
@@ -109,10 +108,9 @@
                 <!--Title and description on the left, full image of the site on the right with text lining the left -->
                 <ul>
                   <li>Single Page Design</li>
-                  <li>Professional styling and colors delivers confidence in the brand</li>
-                  <li>Fully Editable Content</li>
-                  <li>Secure contact area with dynamic capitcha</li>
-                  <li>Built and delivered in 3 business days</li>
+                  <li>Interactive UI gives customer instant quote</li>
+                  <li>Mobile friendly design</li>
+                  <li>Payment options built in</li>
                 </ul>
               </div>
 
@@ -151,7 +149,7 @@
       </div>
 
       <div id="contact">
-        
+        <h3 class="section-header">lets talk</h3>
       </div>
 
     </div>
