--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" type="text/css" href="main-sm.css" media="(max-width: 1100px)" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
   <script src="main.js" type="text/javascript"></script>
 </head>
@@ -119,6 +120,10 @@
                 <img src="res/smartparts-2.png"/>
               </div>
 
+          </div>
+
+          <div class="landing-item" id="allbuthome">
+            All But Home
           </div>
 
           <!-- ADD ITEM FOR ALL BUT HOME APP, PUT PORTRAIT SCREENSHOTS ON THE RIGHT OF INFO, CONTAINER IS ROW INSTEAD OF COL -->
